@@ -1,3 +1,10 @@
+Sat Jun  2 14:34:59 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* configure.in: Give our English man pages the same date format as
+	  the other locales.
+
+	* src/straycats.c: Use 'col -bx' rather than 'col-bx'.
+
 Mon May 28 14:56:35 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* include/manconfig.h.in: Since it isn't sensible to define debug
